# turtlebot3_trajectory_tracking_ws

./: .gitignore  README.md  README_HistogramWindowObstacleAvoidance.md
src/turtlebot3_tracker/: CMakeLists.txt  README.md  TRAJECTORY_README.md  package.xml  setup.cfg  setup.py
src/turtlebot3_tracker/config/: trajectory_visualization.rviz
src/turtlebot3_tracker/launch/: trajectory_publisher.launch.py  trajectory_tracker_with_obstacle_avoidance.launch.py  trajectory_with_rviz.launch.py
src/turtlebot3_tracker/srv/: GlobalPathService.srv  TrajectoryService.srv
src/turtlebot3_tracker/test/: pytest.ini  run_tests.py  test_basic.py  test_launch_files.py  test_trajectory_components.py  test_trajectory_publisher.py  test_trajectory_tracker.py  test_trajectory_tracker_launch.py
src/turtlebot3_tracker/turtlebot3_tracker/: histogram_obstacle_avoidance_example.py  path_generator.py  test_controller_publisher_node.py  trajectory_controller.py  trajectory_generator.py  trajectory_publisher_node.py  trajectory_tracker_with_obstacle_avoidance_node.py
